accepted this again as source for modification; only CloneBench errors remaining